<?xml version="1.0" encoding="utf-8"?>

<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute">

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan"
        android:shortcutId="scan"
        android:shortcutLongLabel="@string/shortcut_scan_long"
        android:shortcutShortLabel="@string/nav_scan">
        <intent
            android:action="org.sarambi.signifer.action.SCAN"
            android:targetClass="org.sarambi.signifer.MainActivity"
            android:targetPackage="org.sarambi.signifer" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_create"
        android:shortcutId="create"
        android:shortcutLongLabel="@string/shortcut_create_long"
        android:shortcutShortLabel="@string/nav_create">
        <intent
            android:action="org.sarambi.signifer.action.CREATE"
            android:targetClass="org.sarambi.signifer.MainActivity"
            android:targetPackage="org.sarambi.signifer" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_history"
        android:shortcutId="history"
        android:shortcutLongLabel="@string/shortcut_history_long"
        android:shortcutShortLabel="@string/nav_history">
        <intent
            android:action="org.sarambi.signifer.action.HISTORY"
            android:targetClass="org.sarambi.signifer.MainActivity"
            android:targetPackage="org.sarambi.signifer" />
    </shortcut>

</shortcuts>
